--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "mongoose": "^5.11.8",
     "socket.io": "^3.0.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "sass": "^1.30.0"
   }
 }
