--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.8",
     "socket.io": "^3.0.4"
   },
