--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.3.1",
     "jquery": "^3.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.8",
